# GraphicEngine

./: .gitignore  CMakeLists.txt  GraphicEngine.sln  README.md
App/: App.vcxproj  App.vcxproj.filters  Application.cpp  Plantilla.h  RenderQLabel.cpp  RenderQLabel.h  RenderedLabel.cpp  Section.h  (+5 more)
GraphicEngine/: Application.cpp  CMakeLists.txt  GraphicEngine.h  GraphicEngine.vcxproj  GraphicEngine.vcxproj.filters  MainWidget.cpp  MainWidget.h  Plantilla.h  RenderedFrame.cpp  RenderedFrame.h  RenderingWidget.cpp  RenderingWidget.h  config.h
GraphicEngine/Auxiliar/: ErrorHandling.cpp  ErrorHandling.h
GraphicEngine/Core/: Core.cpp  Core.h  FBO.cpp  FBO.h  Forward.cpp  Forward.h  GBuffer.cpp  GBuffer.h  Step.cpp  Step.h
GraphicEngine/Core/Render/: Renderable.h  Renderer.cpp  Renderer.h  geNodeRenderable.cpp  geNodeRenderable.h
GraphicEngine/Core/Steps/: Deferred.cpp  Deferred.h  Forward.cpp  Forward.h  PostProcess.cpp  PostProcess.h  QTCopy.cpp  QTCopy.h  Step.cpp  Step.h
GraphicEngine/Headers/: BasicObject.h  Basics.h  Core.h  ErrorHandling.h  Macros.h  Object.h
GraphicEngine/Renderer/: Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
GraphicEngine/Resources/: CUBE.h  Material.cpp  Material.h  MaterialOld.cpp  MaterialOld.h  Mesh.cpp  Mesh.h  MeshOld.cpp  MeshOld.h  Texture.cpp  Texture.h  TextureOld.cpp  TextureOld.h
GraphicEngine/Scene/: BasicObject.h  Camera.cpp  Camera.h  Components.cpp  Components.h  CompoundObject.cpp  CompoundObject.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Object.cpp  Object.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneLight.cpp  SceneLight.h  SceneLoader.cpp  SceneLoader.h  geBasic.cpp  geBasic.h  geContainer.cpp  geContainer.h  geInterface.cpp  geInterface.h  geNode.cpp  geNode.h  geNodeContainer.cpp  geNodeContainer.h  geStorageInterface.cpp  geStorageInterface.h
GraphicEngine/Scene/Derived/: Camera.cpp  Light.cpp  geCamera.cpp  geCamera.h  geContainer.cpp  geContainer.h  geCube.cpp  geCube.h  geImported.cpp  geImported.h  geLight.cpp  geLight.h  geNode.cpp  geNode.h  gePlane.cpp  gePlane.h  geRenderNode.cpp  geRenderNode.h  geScene.h  geSphere.cpp  geSphere.h
GraphicEngine/Scene/Interfaces/: geInterface.cpp  geInterface.h  geStorageInterface.cpp  geStorageInterface.h
GraphicEngine/Scene/Visitor/: ActiveProgramVisitor.h  ActiveTexturesVisitor.h  AddTextureVisitor.h  DeactiveProgramVisitor.h  SetModelViewMatrixVisitor.h  SetModelViewProjectionMatrixVisitor.h  SetNormalMatrixVisitor.h  Visitor.h
GraphicEngine/Shaders/: fwRendering.v1.frag  fwRendering.v2.frag  postProcessing.v1.frag
GraphicEngine/dependencies/ASSIMP/lib/x64/: assimp-vc142-mtd.exp
GraphicEngine/dependencies/YAML-CPP/include/yaml-cpp/node/detail/: node_iterator.h
GraphicEngine/src/: Application.cpp  BasicObject.cpp  Basics.cpp  Core.cpp  ErrorHandling.cpp  Object.cpp
(+71 files in other folders)
